# profitelligence-mcp-server

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  pyproject.toml  requirements.txt
.github/: CODEOWNERS
config/: mcp_config.example.json  mcp_config.schema.json
src/: __init__.py  server.py
src/capabilities/: __init__.py  service_info.py
src/tools/: __init__.py  mcp_tools.py
src/utils/: api_client.py  auth.py  config.py  google_oauth.py  oauth.py  pkce.py  token_exchange.py
tests/: conftest.py  test_api_client.py  test_auth.py  test_config.py  test_server.py  test_service_info.py  test_tools.py
